# manipulability_metrics

./: .clang-tidy  LICENSE.txt  README.md
.github/workflows/: industrial_ci_action.yml
manipulability_metrics/: CMakeLists.txt  package.xml
manipulability_metrics/include/manipulability_metrics/: manipulability_metrics.h
manipulability_metrics/include/manipulability_metrics/kinematics/: chain.h  dual_chain.h
manipulability_metrics/include/manipulability_metrics/metrics/: damm.h  inverse_condition_number.h  manipulability_measure.h  minimum_singular_value.h  todamm.h  tomm.h
manipulability_metrics/include/manipulability_metrics/util/: ellipsoid.h  markers.h  similarity.h
manipulability_metrics/src/: chain.cpp  damm.cpp  dual_chain.cpp  ellipsoid.cpp  inverse_condition_number.cpp  manipulability_measure.cpp  markers.cpp  minimum_singular_value.cpp  similarity.cpp  todamm.cpp  tomm.cpp
manipulability_metrics_examples/: CMakeLists.txt  package.xml
manipulability_metrics_examples/config/: demos.rviz  dual_panda_zeros.yaml  left_panda_joints.yaml  panda_joints.yaml  panda_zeros.yaml  right_panda_joints.yaml
manipulability_metrics_examples/launch/: dual_panda_manipulability_demo.launch  panda_manipulability_demo.launch
manipulability_metrics_examples/src/: demo_utils.h  dual_panda_manipulability_demo.cpp  panda_manipulability_demo.cpp
manipulability_metrics_examples/urdf/: dual_panda.urdf.xacro  panda.urdf.xacro
