<?xml version="1.0"?>
<package format="2">

  <name>manipulability_metrics_examples</name>
  <version>0.0.0</version>
  <description>Usage examples for manipulability_metrics</description>

  <author email="asier.fernandez@tecnalia.com">Asier Fernandez</author>
  <author email="miguel.prada@tecnalia.com">Miguel Prada</author>

  <maintainer email="asier.fernandez@tecnalia.com">Asier Fernandez</maintainer>
  <maintainer email="miguel.prada@tecnalia.com">Miguel Prada</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>kdl_conversions</depend>
  <depend>manipulability_metrics</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>urdf</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>franka_description</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>

</package>
